# MLOps_mnist

./: LICENSE  Makefile  README.md  data.dvc  predict_model.dockerfile  pyproject.toml  requirements.txt  train_model.dockerfile
.dvc/: config
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mnist_classifier/: __init__.py  predict_model.py  train_model.py
mnist_classifier/data/: make_dataset.py
mnist_classifier/models/: model.py
mnist_classifier/visualizations/: visualize.py
models/2024-01-12_00-20-08/: model.pth
models/2024-01-12_03-00-11/: model.pth
models/2024-01-12_03-02-14/: model.pth
models/2024-01-12_03-10-25/: model.pth
models/2024-01-12_03-12-33/: model.pth
models/2024-01-12_03-30-24/: model.pth
models/2024-01-12_03-37-03/: model.pth
models/2024-01-12_21-47-28/: model.pth
